# Learned-indexes-effectiveness

./: .gitignore  CMakeLists.txt  Figures and tables.ipynb  README.md  real_gaps.cpp  run_assumption_tests.sh  run_main.sh  run_real_gaps.sh  run_segments_count.sh  segments_count.cpp  simulate.cpp
include/: args.hxx  common.hpp  piecewise_linear_model.hpp  stats.hpp
